fix nav content alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -56,7 +56,6 @@ a {
   position: relative;
   top: 25%;
   width: 100%;
-  text-align: center;
   margin-top: 30px;
   font-family: 'Roboto', sans-serif;
 
@@ -68,7 +67,6 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-
 }
 
 .nav-line {
